fix nav bug on tablet and UI dashboard

--- a/src/components/dashboard/dashboard.css
+++ b/src/components/dashboard/dashboard.css
@@ -19,12 +19,20 @@
   grid-column-gap: 40px;
 }
 
+
+
 /* Change the direction of the form when the browser window is 700px wide or more */
 @media only screen and (min-width: 769px) { 
   .featured__projects-center{
     width: 90vw;
     grid-template-columns: repeat(auto-fit,minmax(330px,1fr));
   }
+  /* each individual tab div */
+.tabs .container>div {
+  padding: 1.5rem 0;
+  font-size: 1rem;
+ 
+}
  
 }
 
@@ -39,15 +47,17 @@
   text-align: center;
   margin-bottom: 2rem;
 }
-/* each individual tab div */
+
+/* tabs */
 .tabs .container>div {
-  padding: 1.5rem 0;
+  padding: 1rem 0;
   text-transform: uppercase;
   color: #000;
-
   border-bottom: 1px solid #ccc;
+  cursor: pointer;
+    font-size: .75rem;;
+  
 }
-
 
 
 .tab-item-active {
